--- a/config/content.htm
+++ b/config/content.htm
@@ -326,7 +326,8 @@ ctx.fillStyle = "Blue"
 ctx.fill()
 </pre>
 <p><img alt="" height="261" src="/images/2025-01-07 (3).png" width="458"/></p>
-<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/3be8097d08d21e62a3a440a72ebda0d7b574b162/16-1-2">exam1</a></p><h1>HW 3</h1>
+<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/3be8097d08d21e62a3a440a72ebda0d7b574b162/16-1-2">exam1</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Pu6V9STpwLA?si=4JNIstpSzpAjX-Au" title="YouTube video player" width="560"></iframe></p><h1>HW 3</h1>
 <h4>主題: Python 的數字、演算法與迴圈 (20%)</h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 4 and Part 5</p>
 <p>完成上述流程整理後, 請將 HW3 自評分數輸入 cp2024 自評表單中.</p>
