--- a/content/w16_exam1.html
+++ b/content/w16_exam1.html
@@ -236,7 +236,8 @@ ctx.fillStyle = "Blue"
 ctx.fill()
 </pre>
 <p><img alt="" height="261" src="./../images/2025-01-07 (3).png" width="458"/></p>
-<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/3be8097d08d21e62a3a440a72ebda0d7b574b162/16-1-2">exam1</a></p><br />HW 2 Exam << <a href='HW 2 Exam.html'>Previous</a> <a href='HW 3.html'>Next</a> >> HW 3</div>
+<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/3be8097d08d21e62a3a440a72ebda0d7b574b162/16-1-2">exam1</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Pu6V9STpwLA?si=4JNIstpSzpAjX-Au" title="YouTube video player" width="560"></iframe></p><br />HW 2 Exam << <a href='HW 2 Exam.html'>Previous</a> <a href='HW 3.html'>Next</a> >> HW 3</div>
         
     <!-- footer -->
       <div class="container">
