--- a/config/content.htm
+++ b/config/content.htm
@@ -719,7 +719,8 @@ if __name__ == "__main__":
     label_coordinate(ctx, offset_x, offset_y, text_angle)
 </pre>
 <p><img alt="" height="568" src="/images/2025-01-08 (1).png" width="543"/></p>
-<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/245213b9a8ab39756f19714339bc7e87f4662e2c/w16-3.py">exam3</a></p><h1>Final Report</h1>
+<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/245213b9a8ab39756f19714339bc7e87f4662e2c/w16-3.py">exam3</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/vJn8upLlZ0c?si=_KyXWNsyphyDAbHR" title="YouTube video player" width="560"></iframe></p><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (20%)</p>
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
