--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -438,7 +438,7 @@ if __name__ == "__main__":
 </pre>
 <p><img alt="" height="602" src="/images/2025-01-08 (2).png" width="580"/></p>
 <p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/d8e6a3962574d7ef6994c90affb7bb6b117aa806/w16-2">exam2</a></p>
-<p>1235</p><h3>w8</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2im63JL-tZk?si=HxE0HthpUJLpekFm" title="YouTube video player" width="560"></iframe></p><h3>w8</h3>
 <p>操作步驟:</p>
 <ol>
 <li>下載 <a href="http://229.cycu.org/python_2025_lite.7z">python_2025_lite.7z</a> (可攜程式環境)</li>
@@ -719,7 +719,8 @@ if __name__ == "__main__":
     label_coordinate(ctx, offset_x, offset_y, text_angle)
 </pre>
 <p><img alt="" height="568" src="/images/2025-01-08 (1).png" width="543"/></p>
-<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/245213b9a8ab39756f19714339bc7e87f4662e2c/w16-3.py">exam3</a></p><h1>Final Report</h1>
+<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/245213b9a8ab39756f19714339bc7e87f4662e2c/w16-3.py">exam3</a></p>
+<p>123</p><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (20%)</p>
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
